2007-02-09  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/Makefile.am, libwfut/Encoder.cpp, libwfut/Encoder.h: Added
	  some function to encode and decode strings so they are suitable for
	  storage in XML files.

	* libwfut/FileParser.cpp, libwfut/FileWriter.cpp: Use the encode and
	  decode functions.

2007-02-07  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/Makefile.am: Add crc32 files to build.

	* libwfut/WFUT.cpp, libwfut/WFUT.h: Added function to calculate the 
	  list of files that need updating.

	* libwfut/crc32.cpp, libwfut/crc32.h: Created header, fixed compiler
	  errors.

2006-07-12  Simon Goodall  <libwfut@simongoodall.co.uk>

	* tinyxml/*: Add tinyxml to source. Make it part of the WFUT namespace
	  to avoid potential namespace conflicts with other tinyxml versions.

	* libwfut/ChannelFileList.h: Wrapper class around FileList to also
	  contain channel name.

	* libwfut/types.h: Create a FileMap type, mapping filename to a 
	  FileObject.

	* configure.ac, Makefile.am: Added extra dirs.

	* libwfut/FileIO.h, libwfut/FileParser.cpp, libwfut/FileWriter.cpp,
	  libwfut/WFUT.h, libwfut/WFUT.cpp, tests/test3.cpp: Update for
	  ChannelFileList and read/write dir attribute.

	* libwfut/crc32.cpp: Use zlib uLong type.

2006-02-12  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/WFUT.cpp, libwfut/WFUT.h: Rename class to WFUTClient to avoid
	  clashing with namespace. Change the updateChannel method to take a url
	  and path prefix to add to the filenames and source URLS. Create some
	  temporary callbacks to the IO::DownloadComplete and IO::DownloadFailed
	  signals. Download channel and file lists to a location in /tmp (needs
	  to be made platform independant) before parsing. Implement poll
	  method. It is now possible to download a list of channels, a filelist
	  for a given channel and download all the files into a given location.

2006-02-12  Simon Goodall  <libwfut@simongoodall.co.uk>
